--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container"> <!--main div / container -->
                 <h1>The House of Exchange</h1>
                 <form action="">
-                    <input value="" type="text" placeholder="Amount to launder...">
+                    <input value="" type="number" placeholder="Amount to launder...">
                 </form>
 
                 <div class="dropdown-container">
@@ -111,5 +111,6 @@
     <script src="app.js"></script>
 
 </body>
+
 
 </html>
